added registration exception handling, can message on localhost, ..., and updated interface

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vn">
+<html dir="ltr" lang="vn">
 
 <head>
     <meta charset="UTF-8" />
@@ -39,222 +39,13 @@
             </div>
             <div class="wrapper-list">
                 <div class="users-list">
-                    <div class="user active">
+                    <div class="user">
                         <div class="dot"></div>
                         <div class="user-img">
                             <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="latest-msg">
-                                Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis excepturi eos et dolore obcaecati deleniti at? Quae
-                                voluptas iure commodi veniam nemo consectetur nostrum dolorem
-                                molestiae, maiores earum nulla ratione?
-                            </div>
-                        </div>
-                    </div>
-                    <div class="user">
-                        <div class="user-img">
-                            <img src="./view/img/user.png" alt="user">
-                        </div>
-                        <div class="user-info">
+                            <div class="status"></div>
                             <div class="user-name">Lưu Sỹ Trường</div>
                             <div class="latest-msg">
                                 Bạn: Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -268,6 +59,10 @@
             </div>
         </div>
         <div class="main">
+            <div id="ready-start" class="">
+                <img id="" src="./view/img/chat.png" alt="chat">
+                <p>Chọn một đoạn chat để bắt đầu</p>
+            </div>
             <div class="wrapper">
                 <div class="title">
                     <i id="back" class="fa-solid fa-chevron-left"></i>
@@ -276,59 +71,17 @@
                             <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
-                            <div class="user-name">Lưu Sỹ Trường</div>
-                            <div class="status">
-                                Đang hoạt động
+                            <div class="user-name"></div>
+                            <div id="status-text" class="status">
+                                
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="body-chat">
-                    <div class="msg-list">
-                        <div class="msg sent">
-                            <div class="msg-content">
-                                1Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nostrum
-                                voluptatibus natus quaerat illo asperiores odit voluptatum nisi earum tenetur vero ea
-                                totam nulla hic dolorum quis id, error omnis.
-                            </div>
-                        </div>
-                        <div class="msg received">
-                            <div class="msg-content">
-                                2Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere quos odio eos
-                                alias rerum doloremque, iusto dolor quam harum, excepturi ipsam quo iste libero id
-                                doloribus in reiciendis? Voluptate.
-                            </div>
-                        </div>
-                        <div class="msg sent">
-                            <div class="msg-content">
-                                3Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nostrum
-                                voluptatibus natus quaerat illo asperiores odit voluptatum nisi earum tenetur vero ea
-                                totam nulla hic dolorum quis id, error omnis.
-                            </div>
-                        </div>
-                        <div class="msg received">
-                            <div class="msg-content">
-                                4Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere quos odio eos
-                                alias rerum doloremque, iusto dolor quam harum, excepturi ipsam quo iste libero id
-                                doloribus in reiciendis? Voluptate.
-                            </div>
-                        </div>
-                        <div class="msg sent">
-                            <div class="msg-content">
-                                5Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nostrum
-                                voluptatibus natus quaerat illo asperiores odit voluptatum nisi earum tenetur vero ea
-                                totam nulla hic dolorum quis id, error omnis.
-                            </div>
-                        </div>
-                        <div class="msg received">
-                            <div class="msg-content">
-                                6Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere quos odio eos
-                                alias rerum doloremque, iusto dolor quam harum, excepturi ipsam quo iste libero id
-                                doloribus in reiciendis? Voluptate.
-                            </div>
-                        </div>
+                <label for="input" class="body-chat">
+                    <div id="msg-list" class="msg-list">
                     </div>
-                </div>
+                </label>
                 <div class="input-area">
                     <div id="option">
                         <i id="button-show" class="fa-solid fa-plus"></i>
@@ -451,8 +204,8 @@
         <div class="shadow"></div>
     </div>
 
-    <!-- <script type="module" src="asset/js/connection.js"></script>
-    <script type="module" src="asset/js/messageSent.js"></script> -->
+    <script type="module" src="asset/js/connection.js"></script>
+    <script type="module" src="asset/js/messageSent.js"></script>
     <script type="module" src="asset/js/autoHeightInput.js"></script>
     <script type="module" src="asset/js/moreOptionChat.js"></script>
     <script type="module" src="asset/js/userAction.js"></script>
