--- a/register.html
+++ b/register.html
@@ -17,9 +17,25 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <body>
+    <div id="toast" class="toast">
+        <div class="toast-icon">
+            <i class="fa-solid fa-circle-question"></i>
+            <!-- <i class="fa-solid fa-circle-check"></i> -->
+            <!-- <i class="fa-solid fa-circle-exclamation"></i> -->
+        </div>
+        <div class="toast-info">
+            <div class="toast-title">
+                Đăng nhập thành công
+            </div>
+            <div class="toast-content">
+                Chuyển trang sau 3s!
+            </div>
+        </div>
+        <div class="cooldown"></div>
+    </div>
     <div class="container-register">
         <div class="wrapper">
-            <form action="" method="post">
+            <form action="controller/regsiter.php" method="post">
                 <img src="./view/img/chat.png" alt="realtime chat logo">
                 <div class="box-input">
                     <label for="fullname">
@@ -27,16 +43,16 @@
                     </label>
                     <div>
                         <i class="fa-solid fa-user"></i>
-                        <input tabindex="1" id="fullname" name="fullname" type="text" placeholder="nguyen van a" required>
+                        <input tabindex="1" id="fullname" name="fullname" type="text" placeholder="nguyen van a" required title="Nhập Họ và tên của bạn">
                     </div>
                 </div>
                 <div class="box-input">
-                    <label for="email">
+                    <label id="test" for="email">
                         Địa chỉ email
                     </label>
                     <div>
                         <i class="fa-solid fa-envelope"></i>
-                        <input tabindex="2" id="email" name="email" type="text" placeholder="example@gmail.com" required>
+                        <input tabindex="2" id="email" name="email" type="text" placeholder="example@gmail.com" required title="Nhập địa chỉ email của bạn">
                     </div>
                 </div>
                 <div class="box-input">
@@ -45,7 +61,7 @@
                     </label>
                     <div>
                         <i class="fa-solid fa-lock"></i>
-                        <input tabindex="3" id="password" name="password" type="password" placeholder="mật khẩu" required>
+                        <input tabindex="3" id="password" name="password" type="password" placeholder="mật khẩu" required title="Nhập vào mật khẩu">
                         <i class="fa-solid fa-eye" tabindex="4"></i>
                         <!-- <button id="action-password" type="button" name="button">
                         </button> -->
@@ -53,7 +69,7 @@
                     <div>
                         <i class="fa-solid fa-lock"></i>
                         <input tabindex="5" id="repeat-password" name="repeat-password" type="password"
-                            placeholder="nhập lại mật khẩu" required>
+                            placeholder="nhập lại mật khẩu" required title="Nhập lại mật khẩu ở trên">
                         <!-- <i class="fa-solid fa-eye"></i> -->
                     </div>
                 </div>
@@ -68,6 +84,7 @@
     </div>
 <section></section>
     <script src="./asset/js/actionPassword.js"></script>
+    <script type="module" src="./asset/js/register.js"></script>
 </body>
 
 </html>
