logout API and user status API completed

--- a/login.html
+++ b/login.html
@@ -15,10 +15,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body>
+    <div id="toast" class="toast">
+        <div class="wrapper">
+            <div class="toast-icon">
+                <i class="fa-solid fa-circle-question"></i>
+                <!-- <i class="fa-solid fa-circle-check"></i> -->
+                <!-- <i class="fa-solid fa-circle-exclamation"></i> -->
+            </div>
+            <div class="toast-info">
+                <div class="toast-title">
+                    Đăng nhập thành công
+                </div>
+                <div class="toast-content">
+                    Chuyển trang sau 3s!
+                </div>
+            </div>
+            <div class="cooldown"></div>
+        </div>
+    </div>
     <div class="container-login">
         <div class="wrapper">
             <form action="" method="post">
@@ -53,6 +70,7 @@
         </div>
     </div>
     <script src="./asset/js/actionPassword.js"></script>
+    <script type="module" src="./asset/js/login.js"></script>
 </body>
 
 </html>
