--- a/register.html
+++ b/register.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
 <body>
     <div id="toast" class="toast">
@@ -45,7 +46,8 @@
                     </label>
                     <div>
                         <i class="fa-solid fa-user"></i>
-                        <input tabindex="1" id="fullname" name="fullname" type="text" placeholder="nguyen van a" required title="Nhập Họ và tên của bạn">
+                        <input tabindex="1" id="fullname" name="fullname" type="text" placeholder="nguyen van a"
+                            required title="Nhập Họ và tên của bạn">
                     </div>
                 </div>
                 <div class="box-input">
@@ -54,7 +56,8 @@
                     </label>
                     <div>
                         <i class="fa-solid fa-envelope"></i>
-                        <input tabindex="2" id="email" name="email" type="text" placeholder="example@gmail.com" required title="Nhập địa chỉ email của bạn">
+                        <input tabindex="2" id="email" name="email" type="text" placeholder="example@gmail.com" required
+                            title="Nhập địa chỉ email của bạn">
                     </div>
                 </div>
                 <div class="box-input">
@@ -63,7 +66,8 @@
                     </label>
                     <div>
                         <i class="fa-solid fa-lock"></i>
-                        <input tabindex="3" id="password" name="password" type="password" placeholder="mật khẩu" required title="Nhập vào mật khẩu">
+                        <input tabindex="3" id="password" name="password" type="password" placeholder="mật khẩu"
+                            required title="Nhập vào mật khẩu">
                         <i class="fa-solid fa-eye" tabindex="4"></i>
                     </div>
                     <div>
@@ -81,7 +85,6 @@
             </form>
         </div>
     </div>
-<section></section>
     <script src="./asset/js/actionPassword.js"></script>
     <script type="module" src="./asset/js/register.js"></script>
 </body>
