--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script type="module" src="./asset/js/user.js"></script>
+    <script type="module" src="./asset/js/getUsers.js"></script>
+    <script type="module" src="./asset/js/getMessages.js"></script>
     <!-- <script type="module" src="./asset/js/checkSession.js"></script> -->
 </head>
 
